--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -78,7 +78,7 @@
                                     </p>
                                 </div>
                                 <div class="col-4">
-                                    <p>
+                                    <p style="border-top: 10px solid rgba(255,255,255,0) !important;">
                                         Certification n°
                                         <span t-out="str('FNA')+str(user_input.id).rjust(10, '0')"/>
                                         <br/>
