--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -3,6 +3,16 @@
         <xpath expr="." position="replace">
             <t t-call="web.html_container">
                 <t t-foreach="docs" t-as="user_input">
+                    <!-- Open Graph Meta Tags for LinkedIn -->
+                    <head>
+                        <meta property="og:type" content="website" />
+                        <meta property="og:title" t-att-content="'Certificate of Achievement for ' + (user_input.partner_id.name or user_input.email)" />
+                        <meta property="og:description" t-att-content="'This certificate is presented to ' + (user_input.partner_id.name or user_input.email) + ' for successfully completing the ' + user_input.survey_id.display_name" />
+                        <meta property="og:url" t-att-content="'https://firenor.academy/fna/certification/' + str(user_input.id)" />
+                        <!--<meta property="og:image" t-att-content="'/path/to/dynamic/certificate_image_' + str(user_input.id) + '.png'" />-->
+                        <meta property="og:site_name" content="Firenor Academy" />
+                    </head>
+
                     <t t-set="layout_values"
                        t-value="user_input.survey_id.certification_report_layout.split('_') if user_input.survey_id.certification_report_layout else ['not', 'thing']"/>
                     <t t-set="layout_template" t-value="layout_values[0]"/>
@@ -11,24 +21,24 @@
 
                         <style>
                             @font-face {
-                            font-family: 'Square721BT';
-                            src: url('/fn_academy/static/fonts/square_721_bt.ttf') format('truetype');
-                            font-weight: normal;
-                            font-style: normal;
+                                font-family: 'Square721BT';
+                                src: url('/fn_academy/static/fonts/square_721_bt.ttf') format('truetype');
+                                font-weight: normal;
+                                font-style: normal;
                             }
-                            .fn_font{
-                            font-family: 'Square721BT' !important;
+                            .fn_font {
+                                font-family: 'Square721BT' !important;
                             }
-                            .firenor-one{
-                            background-color: #ffffff !important;
-                            background: url(/fn_academy/static/img/firenor-one_seagreen.png);
-                            background-size: cover;
-                            text-align: center;
-                            overflow: hidden;
+                            .firenor-one {
+                                background-color: #ffffff !important;
+                                background: url(/fn_academy/static/img/firenor-one_seagreen.png);
+                                background-size: cover;
+                                text-align: center;
+                                overflow: hidden;
                             }
                         </style>
 
-                        <div t-attf-class="#{'container h-100 justify-content-center align-items-center' + layout_template + ' ' + layout_color}">
+                        <div t-attf-class="#{'container h-100 justify-content-center align-items-center ' + layout_template + ' ' + layout_color}">
 
                             <div class="row mt-5 pt-5 mb-1 fn_font">
                                 <div class="col-12 mt-5 pt-5">
@@ -39,7 +49,7 @@
                                 </div>
                             </div>
                             <div class="row mt-1 mb-3 pt-1 fn_font">
-                                <div class="col-12  mt-4 pt-4">
+                                <div class="col-12 mt-4 pt-4">
                                     <p class="mt-1 pt-1">This certificate is presented to</p>
                                 </div>
                             </div>
