--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -11,6 +11,9 @@
                         <meta property="og:url" t-att-content="'https://firenor.academy/fna/certification/' + str(user_input.id)" />
                         <!--<meta property="og:image" t-att-content="'/path/to/dynamic/certificate_image_' + str(user_input.id) + '.png'" />-->
                         <meta property="og:site_name" content="Firenor Academy" />
+                        <!-- Author and Publish Date -->
+                        <meta property="article:author" content="Firenor Academy" />
+                        <meta property="article:published_time" t-att-content="user_input.create_date.strftime('%Y-%m-%dT%H:%M:%S')" />
                     </head>
 
                     <t t-set="layout_values"
