--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -5,38 +5,38 @@
                 <t t-foreach="docs" t-as="user_input">
                     <!-- Open Graph Meta Tags for Certificate Sharing -->
                     <head>
-                        <meta property="og:type" content="article" />
-                        <meta property="og:title" t-att-content="'Certificate of Achievement for ' + (user_input.partner_id.name or user_input.email)" />
-                        <meta property="og:description" t-att-content="'This certificate is presented to ' + (user_input.partner_id.name or user_input.email) + ' for successfully completing the ' + user_input.survey_id.display_name" />
-                        <meta property="og:url" t-att-content="'https://firenor.academy/fna/certification/' + str(user_input.id)" />
-                        <meta property="og:image" t-att-content="'/fn_academy/static/img/screenshot.png'" />
-                        <meta property="og:site_name" content="Firenor Academy" />
-                        <meta property="article:author" content="Firenor Academy" />
-                        <meta property="article:published_time" t-att-content="user_input.create_date.strftime('%d-%b-%Y')" />
+                        <meta property="og:type" content="website"/>
+                        <meta property="og:title" t-att-content="'Certificate of Achievement for ' + (user_input.partner_id.name or user_input.email)"/>
+                        <meta property="og:description" t-att-content="'This certificate is presented to ' + (user_input.partner_id.name or user_input.email) + ' for successfully completing the ' + user_input.survey_id.display_name"/>
+                        <meta property="og:url" t-att-content="'%s/fna/certification/%s' % (request.httprequest.host_url, user_input.id)"/>
+                        <meta property="og:image" t-att-content="'%s/web/image/survey.user_input/%s/certificate_image' % (request.httprequest.host_url, user_input.id)"/>
+                        <meta property="og:site_name" content="Firenor Academy"/>
                     </head>
 
                     <t t-set="layout_values"
                        t-value="user_input.survey_id.certification_report_layout.split('_') if user_input.survey_id.certification_report_layout else ['not', 'thing']"/>
                     <t t-set="layout_template" t-value="layout_values[0]"/>
                     <t t-set="layout_color" t-value="layout_values[1]"/>
-                    <div id="o_survey_certification" t-att-data-oe-model="user_input._name" t-att-data-oe-id="user_input.id" t-attf-class="#{'article certification-wrapper ' + layout_template + ' ' + layout_color}">
+                    <div id="o_survey_certification" t-att-data-oe-model="user_input._name"
+                         t-att-data-oe-id="user_input.id"
+                         t-attf-class="#{'article certification-wrapper ' + layout_template + ' ' + layout_color}">
 
                         <style>
                             @font-face {
-                                font-family: 'Square721BT';
-                                src: url('/fn_academy/static/fonts/square_721_bt.ttf') format('truetype');
-                                font-weight: normal;
-                                font-style: normal;
+                            font-family: 'Square721BT';
+                            src: url('/fn_academy/static/fonts/square_721_bt.ttf') format('truetype');
+                            font-weight: normal;
+                            font-style: normal;
                             }
                             .fn_font {
-                                font-family: 'Square721BT' !important;
+                            font-family: 'Square721BT' !important;
                             }
                             .firenor-one {
-                                background-color: #ffffff !important;
-                                background: url(/fn_academy/static/img/firenor-one_seagreen.png);
-                                background-size: cover;
-                                text-align: center;
-                                overflow: hidden;
+                            background-color: #ffffff !important;
+                            background: url(/fn_academy/static/img/firenor-one_seagreen.png);
+                            background-size: cover;
+                            text-align: center;
+                            overflow: hidden;
                             }
                         </style>
 
@@ -84,7 +84,8 @@
                                 </div>
                             </div>
 
-                            <div class="row m-5 p-4 fn_font" t-if="user_input.scoring_success" style="text-align: left !important;">
+                            <div class="row m-5 p-4 fn_font" t-if="user_input.scoring_success"
+                                 style="text-align: left !important;">
                                 <div class="col-8">
                                     <p></p>
                                 </div>
@@ -93,7 +94,9 @@
                                         Certification n°
                                         <span t-out="str('FNA')+str(user_input.id).rjust(10, '0')"/>
                                         <br/>
-                                        <span>Date: <t t-esc="user_input.create_date.strftime('%d-%b-%Y')"/></span>
+                                        <span>Date:
+                                            <t t-esc="user_input.create_date.strftime('%d-%b-%Y')"/>
+                                        </span>
                                     </p>
                                 </div>
                             </div>
