--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -9,7 +9,7 @@
                         <meta property="og:title" t-att-content="'Certificate of Achievement for ' + (user_input.partner_id.name or user_input.email)"/>
                         <meta property="og:description" t-att-content="'This certificate is presented to ' + (user_input.partner_id.name or user_input.email) + ' for successfully completing the ' + user_input.survey_id.display_name"/>
                         <meta property="og:url" t-att-content="'%s/fna/certification/%s' % (request.httprequest.host_url, user_input.id)"/>
-                        <meta property="og:image" t-att-content="'%sfna/certification/%s/image' % (request.httprequest.host_url, user_input.id)"/>
+                        <meta property="og:image" t-att-content="'%sweb/image/survey.user_input/%s/certificate_image' % (request.httprequest.host_url, user_input.id)"/>
                         <meta property="og:site_name" content="Firenor Academy"/>
                     </head>
 
