--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -12,7 +12,7 @@
                         <meta property="og:image" t-att-content="'data:image/png;base64,{{user_input.certificate_image.decode('utf-8')}}'"/>
                         <meta property="og:type" content="website"/> t-att-content="'Certificate of Achievement for ' + (user_input.partner_id.name or user_input.email)"/>
                         <meta property="og:description" t-att-content="'This certificate is presented to ' + (user_input.partner_id.name or user_input.email) + ' for successfully completing the ' + user_input.survey_id.display_name"/>
-                        <meta property="og:url" t-att-content="'%s/fna/certification/%s' % (request.httprequest.host_url, user_input.id)"/>
+                        <meta property="og:url" t-att-content="'%sfna/certification/%s' % (request.httprequest.host_url, user_input.id)"/>
                     </head>
 
                     <t t-set="layout_values"
