--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -5,17 +5,14 @@
                 <t t-foreach="docs" t-as="user_input">
                     <!-- Open Graph Meta Tags for Certificate Sharing -->
                     <head>
-                        <!-- Embed the image inline using Base64 -->
-                        <img t-attf-src="data:image/*;base64,{{user_input.certificate_image}}"
-                             alt="Certificate Image"/>
-
-                        <!-- Open Graph Meta Tag -->
-                        <meta property="og:image" t-att-content="data:image/*;base64,{{user_input.certificate_image}}"/>
-
                         <meta property="og:type" content="website"/>
                         <meta property="og:title" t-att-content="'Certificate of Achievement for ' + (user_input.partner_id.name or user_input.email)"/>
                         <meta property="og:description" t-att-content="'This certificate is presented to ' + (user_input.partner_id.name or user_input.email) + ' for successfully completing the ' + user_input.survey_id.display_name"/>
-                        <meta property="og:url" t-att-content="'%s/fna/certification/%s' % (request.httprequest.host_url, user_input.id)"/>
+                        <meta property="og:url" t-att-content="'%sfna/certification/%s' % (request.httprequest.host_url, user_input.id)"/>
+                        <!--<meta property="og:image" t-att-content="'%sweb/image/survey.user_input/%s/certificate_image' % (request.httprequest.host_url, user_input.id)"/>-->
+                       <meta property="og:image" t-attf-content="{{request.httprequest.host_url}}fna/certification/{{user_input.id}}/image" />
+
+                        <meta property="og:site_name" content="Firenor Academy"/>
                     </head>
 
                     <t t-set="layout_values"
